--- a/About me.html
+++ b/About me.html
@@ -1,6 +1,28 @@
 <html>
   <head>
 <title> About Me </title>
+    <style type="text/css">
+h1{
+  text-align:center
+}
+body {
+background-color: silver;
+color: white;
+padding: 20px;
+font-family: FreeMono, monospace;
+text-align:center}
+p1 {
+  background-color: #8F70BC;
+  background-color: hsl(264, 40%, 59%);
+}
+h2 {
+  background-color: #8F70BC;
+  background-color: hsl(264, 40%, 59%);
+}
+ul{
+  text-align:left
+}
+</style>
 <hr/>
 </head>
 <Body>
