--- a/my work.html
+++ b/my work.html
@@ -29,3 +29,4 @@ p {
 <img src="https://raw.githubusercontent.com/bes147/Web-Page/main/Images/9E26CDFB-C0BF-4EBE-BD10-3BCFE0241614.jpeg" alt= "Resume Page 2" width="300" height="450" />
 <img src="https://raw.githubusercontent.com/bes147/Web-Page/main/Images/6732436C-6A8A-49F2-B1F7-9C4E3D1F2BCE.jpeg" alt= "Resume Page 3" width="300" height="450" />
 <li><a href="https://github.com/bes147/Web-Page/blob/main/Images/Smith-Resume-2022-3.pdf"> Resume</a></li>
+  </html>
