--- a/Home.html
+++ b/Home.html
@@ -27,7 +27,7 @@ h2 {
   <ul>
       <li><a href="index.html" id="onlink">Home</a></li>
       <li><a href="Digital Media Project.html">About Me</a></li>
-      <li><a href="work.html">Work</a></li>
+      <li><a href="mywork.html">Work</a></li>
     </ul>
   </div>
 <body>
