--- a/mywork.html
+++ b/mywork.html
@@ -18,6 +18,11 @@ p {
 </style>
 <hr/>
 </head>
+  <div class="nav_bar">
+  <ul>
+      <li><a href="Home.html">About Me</a></li>
+    </ul>
+  </div>
 <body>
 <h1> My Work </h1>
 <p> I am currently enrolled in a digital media class at the University of Pittsburgh. Here is one of the assignments that I have composed throughout the semester. I value career paths that allow me to express my creative side while also acting as a professional. Working with children has been the best compromise of these two qualities I possess. </p>
