--- a/Digital Media Project.html
+++ b/Digital Media Project.html
@@ -25,6 +25,11 @@ ul{
 </style>
 <hr/>
 </head>
+  <div class="nav_bar">
+  <ul>
+      <li><a href="Home.html">About Me</a></li>
+    </ul>
+  </div>
 <Body>
 <h1> About me </h1>
 <p1> My name is Breanna Smith and I am a junior at the University of Pittsburgh. I am majoring in Psychology, minoring in exercise science, on the pre- physician associate track, and obtaining a certificate in the conceptual foundations of medicine. I currently work as the ticket office manager for the William Pitt Union and as a student behavioral associate at Western Psychiatric Institute and Clinic on the child and adolescent floor. I serve as the Director of Programming for Pitt Dance Marathon which raising money for the Children's Hospital of Pittsburgh, and a member of both Club Cheer and Pitt Pre-Pa Association. </p1>
