--- a/Digital Media Project.html
+++ b/Digital Media Project.html
@@ -27,7 +27,7 @@ ul{
 </head>
   <div class="nav_bar">
   <ul>
-      <li><a href="Home.html">About Me</a></li>
+      <li><a href="Home.html">Home</a></li>
     </ul>
   </div>
 <Body>
