--- a/mywork.html
+++ b/mywork.html
@@ -15,12 +15,15 @@ p {
   background-color: #8F70BC;
   background-color: hsl(264, 40%, 59%);
 }
+  ul{
+  text-align:left
+}
 </style>
 <hr/>
 </head>
   <div class="nav_bar">
   <ul>
-      <li><a href="Home.html">About Me</a></li>
+      <li><a href="Home.html">Home</a></li>
     </ul>
   </div>
 <body>
