Update Digital Media Project.html

--- a/Digital Media Project.html
+++ b/Digital Media Project.html
@@ -1,7 +1,7 @@
 <html>
   <head>
 <title> About Me </title>
-    <style type="text/css">
+<style type="text/css">
 h1{
   text-align:center
 }
@@ -14,6 +14,7 @@ text-align:center}
 p1 {
   background-color: #8F70BC;
   background-color: hsl(264, 40%, 59%);
+  width: 300px;
 }
 h2 {
   background-color: #8F70BC;
@@ -22,19 +23,24 @@ h2 {
 ul{
   text-align:left
 }
+div{
+  width: 100%;
+}
 </style>
 <hr/>
 </head>
-  <div class="nav_bar">
+<div class="nav_bar">
   <ul>
       <li><a href="Home.html">Home</a></li>
     </ul>
   </div>
 <Body>
 <h1> About me </h1>
+<div>
 <p1> My name is Breanna Smith and I am a junior at the University of Pittsburgh. I am majoring in Psychology, minoring in exercise science, on the pre- physician associate track, and obtaining a certificate in the conceptual foundations of medicine. I currently work as the ticket office manager for the William Pitt Union and as a student behavioral associate at Western Psychiatric Institute and Clinic on the child and adolescent floor. I serve as the Director of Programming for Pitt Dance Marathon which benefits the Children's Hospital of Pittsburgh, and a member of both Club Cheer and Pitt Pre-Pa Association. </p1>
+</div>
 </body>
-<img src="https://raw.githubusercontent.com/bes147/Web-Page/main/Images/Smith%204.JPEG" alt= "A headshot of myself in my Pitt Dance Marathon Polo" width="750" height="450" />
+<img src="https://raw.githubusercontent.com/bes147/Web-Page/main/Images/Smith%204.JPEG" alt= "A headshot of myself in my Pitt Dance Marathon Polo" width="450" height="300" />
 <h2>These experiences help contribute to my ability to...</h2>
 <ul>
   <li>Work well with a team</li>
@@ -44,5 +50,3 @@ ul{
 </ul>
 <h2>Contact Information</h2>
 <p>Phone Number: (570) 259-7163</p>
-<p>Email: bes147@pitt.edu</p>
-</html>
